<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.nick_sib.beauty_radar.ui.authScreen.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_pink"
        tools:context="com.nick_sib.beauty_radar.ui.authScreen.AuthFragment">

        <ImageView
            android:id="@+id/fragment_auth_iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/def_offset"
            android:background="@drawable/ic_welcome_picture"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/d_iv_logo" />

        <TextView
            android:id="@+id/fragment_auth_tv_welcome"
            style="@style/TextWelcome"
            android:text="@string/s_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_auth_iv_logo" />

        <TextView
            android:id="@+id/fragment_auth_tv_warning"
            style="@style/TextWarning"
            android:layout_marginHorizontal="@dimen/def_horizontal_offset"
            android:layout_marginBottom="@dimen/offset62"
            android:text="@string/s_warning"
            android:linksClickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_auth_til_phone"
            style="@style/TextInputLayoutBG"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius"
            app:boxCornerRadiusTopStart="@dimen/corner_radius"
            android:animateLayoutChanges="true"
            android:paddingBottom="@dimen/def_offset"
            android:background="@drawable/text_rounded_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset75"
            android:layout_marginHorizontal="@dimen/def_horizontal_offset"
            app:prefixText="+7 "
            app:prefixTextColor="@color/Black"
            app:startIconDrawable="@drawable/ic_russian_flag"
            app:startIconTintMode="multiply"
            app:startIconTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_auth_tv_welcome"
            bind:setError="@{viewModel.phoneError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auth_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="15"
                android:imeOptions="actionDone"
                android:textColor="@color/Black"
                bind:onSingIn="@{viewModel.signIn}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fragment_auth_btn_enter"
            style="@style/ButtonLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/offset62"
            android:text="@string/enter"
            android:layout_marginTop="@dimen/big_offset"
            android:layout_marginHorizontal="@dimen/def_horizontal_offset"
            android:theme="@style/Theme.Beautyradar.Third"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_auth_til_phone"
            app:layout_constraintStart_toStartOf="parent"
            bind:onSingIn="@{viewModel.signIn}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
