<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.nick_sib.beauty_radar.ui.enter_code.EnterCodeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_pink"
        tools:context=".ui.enter_code.EnterCodeFragment">

        <include
            android:id="@+id/fragment_auth_loading_dialog"
            layout="@layout/dialog_loading"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/enter_code_fragment_iv_back_to"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_offset"
            android:src="@drawable/ic_arrow_left"
            android:background="@drawable/bg_transparent_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/enter_code_fragment_tv_confirmation"
            style="@style/TextConfirmation"
            android:layout_marginTop="@dimen/offset80"
            android:text="@string/the_confirmation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_code_fragment_tv_info"
            style="@style/TextCodeHelp"
            android:layout_marginHorizontal="@dimen/offset52"
            android:layout_marginTop="@dimen/big_offset"
            android:text="@string/text_help_info_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_code_fragment_tv_confirmation" />

        <LinearLayout
            android:id="@+id/enter_code_fragment_ll_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_24"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_code_fragment_tv_info">

            <View
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="@dimen/dot_margin"
                android:background="@drawable/ic_circle_black" />

            <View
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="@dimen/dot_margin"
                android:background="@drawable/ic_circle_black" />

            <View
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="@dimen/dot_margin"
                android:background="@drawable/ic_circle_black" />

            <View
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="@dimen/dot_margin"
                android:background="@drawable/ic_circle_black" />

            <View
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="@dimen/dot_margin"
                android:background="@drawable/ic_circle_black" />

            <View
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="@dimen/dot_margin"
                android:background="@drawable/ic_circle_black" />
        </LinearLayout>

        <Button
            android:id="@+id/enter_code_fragment_b_resend_sms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/offset52"
            android:paddingVertical="@dimen/def_offset"
            android:background="@drawable/rounded_corners_for_button_cont"
            android:fontFamily="@font/cardo"
            android:text="@string/resend_sms"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:theme="@style/Theme.Beautyradar.Second"
            app:layout_constraintBottom_toTopOf="@id/enter_code_fragment_b_digit2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_code_fragment_ll_dots"
            bind:resendSMS="@{viewModel.resendSMS}"/>


        <Button
            android:id="@+id/enter_code_fragment_b_digit1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_digit_width"
            android:layout_height="@dimen/button_digit_height"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/digit1"
            android:textColor="@color/black"
            android:textSize="@dimen/button_digit_text_size"
            android:layout_marginHorizontal="@dimen/button_digit_margin"
            app:shapeAppearanceOverlay="@style/Button.Circle"
            app:layout_constraintBottom_toTopOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintEnd_toStartOf="@id/enter_code_fragment_b_digit5"/>

        <Button
            android:id="@+id/enter_code_fragment_b_digit2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_digit_width"
            android:layout_height="@dimen/button_digit_height"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/digit2"
            android:textColor="@color/black"
            android:textSize="@dimen/button_digit_text_size"
            android:layout_marginHorizontal="@dimen/button_digit_margin"
            app:shapeAppearanceOverlay="@style/Button.Circle"
            app:layout_constraintBottom_toTopOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintEnd_toEndOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintStart_toStartOf="@id/enter_code_fragment_b_digit5"/>
        <Button
            android:id="@+id/enter_code_fragment_b_digit3"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_digit_width"
            android:layout_height="@dimen/button_digit_height"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/digit3"
            android:textColor="@color/black"
            android:textSize="@dimen/button_digit_text_size"
            android:layout_marginHorizontal="@dimen/button_digit_margin"
            app:shapeAppearanceOverlay="@style/Button.Circle"
            app:layout_constraintBottom_toTopOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintStart_toEndOf="@id/enter_code_fragment_b_digit5"/>
        <Button
            android:id="@+id/enter_code_fragment_b_digit4"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_digit_width"
            android:layout_height="@dimen/button_digit_height"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/digit4"
            android:textColor="@color/black"
            android:textSize="@dimen/button_digit_text_size"
            android:layout_marginHorizontal="@dimen/button_digit_margin"
            app:shapeAppearanceOverlay="@style/Button.Circle"
            app:layout_constraintBottom_toBottomOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintEnd_toStartOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintTop_toTopOf="@id/enter_code_fragment_b_digit5"/>
        <Button
            android:id="@+id/enter_code_fragment_b_digit5"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_digit_width"
            android:layout_height="@dimen/button_digit_height"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/digit5"
            android:textColor="@color/black"
            android:textSize="@dimen/button_digit_text_size"
            android:layout_marginBottom="80dp"
            android:layout_marginHorizontal="@dimen/button_digit_margin"
            app:shapeAppearanceOverlay="@style/Button.Circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_code_fragment_ll_dots"/>
        <Button
            android:id="@+id/enter_code_fragment_b_digit6"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_digit_width"
            android:layout_height="@dimen/button_digit_height"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/digit6"
            android:textColor="@color/black"
            android:textSize="@dimen/button_digit_text_size"
            android:layout_marginHorizontal="@dimen/button_digit_margin"
            app:shapeAppearanceOverlay="@style/Button.Circle"
            app:layout_constraintStart_toEndOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintBottom_toBottomOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintTop_toTopOf="@id/enter_code_fragment_b_digit5"/>
        <Button
            android:id="@+id/enter_code_fragment_b_digit7"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_digit_width"
            android:layout_height="@dimen/button_digit_height"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/digit7"
            android:textColor="@color/black"
            android:textSize="@dimen/button_digit_text_size"
            android:layout_marginHorizontal="@dimen/button_digit_margin"
            app:shapeAppearanceOverlay="@style/Button.Circle"
            app:layout_constraintEnd_toStartOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintTop_toBottomOf="@id/enter_code_fragment_b_digit5"/>
        <Button
            android:id="@+id/enter_code_fragment_b_digit8"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_digit_width"
            android:layout_height="@dimen/button_digit_height"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/digit8"
            android:textColor="@color/black"
            android:textSize="@dimen/button_digit_text_size"
            app:shapeAppearanceOverlay="@style/Button.Circle"
            app:layout_constraintEnd_toEndOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintStart_toStartOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintTop_toBottomOf="@id/enter_code_fragment_b_digit5"/>
        <Button
            android:id="@+id/enter_code_fragment_b_digit9"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_digit_width"
            android:layout_height="@dimen/button_digit_height"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/digit9"
            android:textColor="@color/black"
            android:textSize="@dimen/button_digit_text_size"
            android:layout_marginHorizontal="@dimen/button_digit_margin"
            app:shapeAppearanceOverlay="@style/Button.Circle"
            app:layout_constraintStart_toEndOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintTop_toBottomOf="@id/enter_code_fragment_b_digit5"/>
        <Button
            android:id="@+id/enter_code_fragment_b_digit0"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_digit_width"
            android:layout_height="@dimen/button_digit_height"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/digit0"
            android:textColor="@color/black"
            android:textSize="@dimen/button_digit_text_size"
            android:layout_marginHorizontal="@dimen/button_digit_margin"
            app:shapeAppearanceOverlay="@style/Button.Circle"
            app:layout_constraintStart_toStartOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintEnd_toEndOf="@id/enter_code_fragment_b_digit5"
            app:layout_constraintTop_toBottomOf="@id/enter_code_fragment_b_digit8"/>

        <ImageButton
            android:id="@+id/enter_code_fragment_b_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/button_digit_margin"
            android:src="@drawable/ic_back"
            android:background="@drawable/bg_transparent_button"
            app:layout_constraintBottom_toBottomOf="@+id/enter_code_fragment_b_digit0"
            app:layout_constraintEnd_toEndOf="@+id/enter_code_fragment_b_digit9"
            app:layout_constraintStart_toStartOf="@+id/enter_code_fragment_b_digit9"
            app:layout_constraintTop_toBottomOf="@+id/enter_code_fragment_b_digit8" />
<!--        app:shapeAppearanceOverlay="@style/Button.Circle"-->
        <!--        <EditText-->
        <!--            android:id="@+id/enter_code_fragment_et_entry_field_code"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="50dp"-->
        <!--            android:layout_marginTop="@dimen/big_offset"-->
        <!--            android:layout_marginEnd="50dp"-->
        <!--            android:background="@color/transparent"-->
        <!--            android:gravity="center"-->
        <!--            android:inputType="numberPassword"-->
        <!--            android:textSize="100sp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.0"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/enter_code_fragment_tv_info" />-->


        <!--        <TextView-->
        <!--            android:id="@+id/enter_code_fragment_btn_go"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:background="@drawable/rounded_corners_for_button_cont"-->
        <!--            android:backgroundTint="@color/hot_pink_75_transp"-->
        <!--            android:clickable="false"-->
        <!--            android:gravity="center"-->
        <!--            android:paddingVertical="19dp"-->
        <!--            android:text="@string/procced"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textSize="18sp"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/enter_code_fragment_et_entry_field_code"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/enter_code_fragment_et_entry_field_code"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/enter_code_fragment_et_entry_field_code" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/enter_code_fragment_tv_sms_not_come"-->
        <!--            style="@style/Widget.AppCompat.TextView"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:clickable="true"-->
        <!--            android:gravity="center"-->
        <!--            android:layout_marginTop="@dimen/def_offset"-->
        <!--            android:layout_marginStart="126dp"-->
        <!--            android:layout_marginEnd="126dp"-->
        <!--            android:text="@string/sms_not_come"-->
        <!--            android:textSize="@dimen/button_text"-->
        <!--            android:textStyle="normal"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/enter_code_fragment_btn_go"-->
        <!--            android:focusable="true" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>