<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_pink">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_welcome_picture"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Добро \nпожаловать"
        android:textColor="@color/Black"
        android:textSize="36sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:fontFamily="@font/montserrat_medium"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="305dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners_for_button_cont"
        android:fontFamily="@font/cardo104s"
        android:text="@string/cont"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:theme="@style/Theme.Beautyradar.Second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="305dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corners_for_button_cont"
        android:fontFamily="@font/cardo104s"
        android:text="@string/registr"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:theme="@style/Theme.Beautyradar.Third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/warn1"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/warn2_link"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />



</androidx.constraintlayout.widget.ConstraintLayout>